# chatgpt4o-analysis

./: README.md
1_game-builder-crew/: agents.py  main.py  pyproject.toml  tasks.py
2_trip_planner/: main.py  pyproject.toml  trip_agents.py
3_stock_analysis/: README.md  pyproject.toml
game-builder-crew/: pyproject.toml
outputs/: game_planner_chatgpt4_turbo.py  game_planner_chatgpt4o.py  stock_analysis_chatgpt4_turbo.md  stock_analysis_chatgpt4o.md  trip_planner_chatgpt4_turbo.md  trip_planner_chatgpt4o.md
stock_analysis/: main.py  stock_analysis_agents.py  stock_analysis_tasks.py
trip_planner/: trip_tasks.py
